@@ -1,4 +1,4 @@
-package story.cheek.application.dto;
+package story.cheek.application.dto.request;
 
 import org.springframework.web.multipart.MultipartFile;
 import story.cheek.application.domain.Application;
@@ -18,8 +18,9 @@ public record ApplicationRequest(
         return Application.builder()
                 .member(member)
                 .companyEmail(email)
-                .firstImageUrl(files.getFirst().getOriginalFilename())
-                .secondImageUrl(files.getLast().getOriginalFilename())
+                .firstImageUrl(files.get(0).getOriginalFilename())
+                .secondImageUrl(files.get(1).getOriginalFilename())
+                .isDelete(false)
                 .build();
     }
 }
